if(BUILD_FC)
    add_subdirectory( fc )
endif()    
add_subdirectory( db )
add_subdirectory( chain )
add_subdirectory( egenesis )
add_subdirectory( net )
add_subdirectory( utilities )
add_subdirectory( app )
add_subdirectory( plugins )
add_subdirectory( wallet )
add_subdirectory( lua-gph )
if(BUILD_PROCESS_ENCRYPTION)
    add_subdirectory( process_encryption )
endif()
